Updated flags for intellij14 with java8