@@ -1,23 +1,18 @@
 -ea
 -server
 -Xms1G
--Xmx1G
+-Xmx2048M
 -Xss2m
--XX:MaxPermSize=350m
+-XX:+UseParallelOldGC
 -XX:MaxMetaspaceSize=350m
 -XX:ReservedCodeCacheSize=225m
 -XX:MetaspaceSize=512m
 -XX:+DoEscapeAnalysis
--XX:+UseCompressedOops
 -XX:+UnlockExperimentalVMOptions
--XX:+UseConcMarkSweepGC
 -XX:LargePageSizeInBytes=256m
 -XX:ReservedCodeCacheSize=96m
 -XX:+UseCodeCacheFlushing
--XX:+UseCompressedOops
 -XX:ParallelGCThreads=4
--XX:+UseParNewGC
--XX:+UseConcMarkSweepGC
 -XX:+DisableExplicitGC
 -XX:+ExplicitGCInvokesConcurrent
 -XX:+PrintGCDetails
